Bug 1192573 - Require tablet-mode (Win10+) to show the on-screen keyboard. r=masayuki, a=sledru